[package]
name = "arduino_test"
version = "0.1.0"
authors = ["Angel Alonso Fonseca <alonsofonseca.angel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[dependencies]
#log = "0.4"
#serial = "0.4.0"
#thiserror = "1.0.20"
#serde = "1.0"
#serde_yaml = "0.7"
#serde_derive = "1.0"

[dependencies]
chrono = "0.4"
log = "0.4"
env_logger = "0.8"
rand = "0.5.6"
regex = "1.4.2"
rust_gpiozero = "0.2.0"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"
serial = "0.4.0"
thiserror = "1.0.20"
#rocket = "0.4.6"
clap = "2.33.3"

