[package]
name = "brain"
version = "0.2.1"
authors = ["Angel Alonso Fonseca <alonsofonseca.angel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"
sysfs_gpio = "0.5"
