[package]
name = "circuits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
tokio = { version = "1.17", features = ["full"] }
crossbeam-channel = "0.5.1"
log = "0.4.17"
env_logger = "0.10.0"
chrono = "0.4.23"

[target.'cfg(target_arch = "aarch64")'.dependencies]
rust-pigpio = "0.2.0"
