[package]
name = "circuits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
crossbeam-channel = "0.5.1"
env_logger = "0.10.0"
hyper = { version = "0.14", features = ["full"] }
log = "0.4.17"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.17", features = ["full"] }
warp = "0.3"
load-dotenv = "0.1.2"

[target.'cfg(target_arch = "arm")'.dependencies]
rust-pigpio = "0.2.0"
