[package]
name = "virtual_test"
version = "0.1.0"
authors = ["Angel Alonso Fonseca <alonsofonseca.angel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.64.0"
find_folder = "0.3.0"
rand = "0.3.14"
piston = "0.35.0"
piston2d-graphics = "0.24.0"
pistoncore-glutin_window = "0.43.0"
piston2d-opengl_graphics = "0.50.0"
