[package]
name = "botlogic"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_yaml = "0.8.24"
thiserror = "1.0.31"
rustlogic = "0.2.0"
regex = "1.5.6"
