[package]
name = "robotlogic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[package.metadata.maturin]
classifier = [
  "Programming Language :: Rust",
  "Operating System :: POSIX :: Linux",
]

[dependencies]
pyo3 = { version = "0.16.5", features = ["extension-module"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_yaml = "0.8.24"
thiserror = "1.0.31"
rustlogic = "0.2.0"
